--- a/core/common/json_utils/BUILD.gn
+++ b/core/common/json_utils/BUILD.gn
@@ -29,6 +29,7 @@ if (defined(ohos_lite)) {
       cflags = [ "-Wall" ]
       sources = [ "softbus_json_utils.c" ]
       deps = [
+        "$dsoftbus_root_path/core/common/log:softbus_log",
         "$hilog_lite_deps_path",
         "$libsec_deps_path",
         "//build/lite/config/component/cJSON:cjson_static",
@@ -40,6 +41,7 @@ if (defined(ohos_lite)) {
       cflags = [ "-Wall" ]
       sources = [ "softbus_json_utils.c" ]
       public_deps = [
+        "$dsoftbus_root_path/core/common/log:softbus_log",
         "$hilog_lite_deps_path",
         "$libsec_deps_path",
         "//build/lite/config/component/cJSON:cjson_shared",
@@ -56,6 +58,7 @@ if (defined(ohos_lite)) {
     ]
     sources = [ "softbus_json_utils.c" ]
     public_deps = [
+      "$dsoftbus_root_path/core/common/log:softbus_log",
       "//third_party/cJSON:cjson_static",
       "//utils/native/base:utilsecurec_shared",
     ]
