--- a/core/common/security/permission/BUILD.gn
+++ b/core/common/security/permission/BUILD.gn
@@ -51,6 +51,7 @@ if (defined(ohos_lite)) {
         ":permission_json",
         "$dsoftbus_core_path/adapter/kernel:softbus_adapter_kernel",
         "$dsoftbus_core_path/common/utils:softbus_utils",
+        "$dsoftbus_root_path/core/common/log:softbus_log",
         "$hilog_lite_deps_path",
         "$libsec_deps_path",
         "//base/security/permission/services/permission_lite/pms_client:pms_client",
@@ -86,6 +87,7 @@ if (defined(ohos_lite)) {
       ":softbus_permission_json",
       "$dsoftbus_core_path/common/json_utils:json_utils",
       "$dsoftbus_core_path/common/utils:softbus_utils",
+      "$dsoftbus_root_path/core/common/log:softbus_log",
       "//foundation/appexecfwk/standard/kits:appkit_native",
       "//third_party/cJSON:cjson_static",
       "//utils/native/base:utils",
