--- a/core/common/softbus_property/BUILD.gn
+++ b/core/common/softbus_property/BUILD.gn
@@ -34,6 +34,7 @@ if (defined(ohos_lite)) {
         "$libsec_deps_path",
         "//build/lite/config/component/cJSON:cjson_static",
         "$dsoftbus_root_path/adapter:softbus_adapter",
+        "$dsoftbus_root_path/core/common/log:softbus_log",
       ]
     }
   } else {
@@ -50,6 +51,7 @@ if (defined(ohos_lite)) {
         "$libsec_deps_path",
         "//build/lite/config/component/cJSON:cjson_shared",
         "$dsoftbus_root_path/adapter:softbus_adapter",
+        "$dsoftbus_root_path/core/common/log:softbus_log",
       ]
     }
   }
@@ -74,6 +76,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_core_path/common/json_utils",
       "//third_party/cJSON:cjson_static",
       "$dsoftbus_root_path/adapter:softbus_adapter",
+      "$dsoftbus_root_path/core/common/log:softbus_log",
     ]
     part_name = "dsoftbus_standard"
     subsystem_name = "communication"
