--- a/sdk/transmission/ipc/BUILD.gn
+++ b/sdk/transmission/ipc/BUILD.gn
@@ -29,6 +29,7 @@ if (defined(ohos_lite)) {
 
   common_deps = [
     "$dsoftbus_root_path/core/adapter/kernel:softbus_adapter_kernel",
+    "$dsoftbus_root_path/core/common/log:softbus_log",
     "$hilog_lite_deps_path",
     "$libsec_deps_path",
   ]
@@ -83,7 +84,10 @@ if (defined(ohos_lite)) {
         "ipc:ipc_single",
         "hiviewdfx_hilog_native:libhilog",
       ]
-      deps = [ "//utils/native/base:utils" ]
+      deps = [
+        "//utils/native/base:utils",
+        "$dsoftbus_root_path/core/common/log:softbus_log",
+      ]
     }
     part_name = "dsoftbus_standard"
     subsystem_name = "communication"
