--- a/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/BUILD.gn
+++ b/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/BUILD.gn
@@ -61,6 +61,7 @@ shared_library("libsoftbus_stream") {
   deps = [
     "$dsoftbus_root_path/components/nstackx_enhanced/fillp:Dstream",
     "$dsoftbus_root_path/core/common:softbus_core_common",
+    "$dsoftbus_root_path/core/common/log:softbus_log",
     "//third_party/bounds_checking_function:libsec_shared",
   ]
   deps += [ "$hilog_lite_deps_path" ]
