--- a/core/common/message_handler/BUILD.gn
+++ b/core/common/message_handler/BUILD.gn
@@ -28,6 +28,7 @@ if (defined(ohos_lite)) {
   ]
   common_deps = [
     "$dsoftbus_root_path/core/adapter/kernel:softbus_adapter_kernel",
+    "$dsoftbus_root_path/core/common/log:softbus_log",
     "$hilog_lite_deps_path",
     "$libsec_deps_path",
   ]
@@ -61,8 +62,10 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/adapter/kernel/include",
     ]
     sources = [ "message_handler.c" ]
-    public_deps =
-        [ "$dsoftbus_root_path/core/adapter/kernel:softbus_adapter_kernel" ]
+    public_deps = [
+      "$dsoftbus_root_path/core/adapter/kernel:softbus_adapter_kernel",
+      "$dsoftbus_root_path/core/common/log:softbus_log",
+    ]
     public_configs = [ ":message_handler_interface" ]
     if (is_standard_system) {
       external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
