--- a/core/connection/br/BUILD.gn
+++ b/core/connection/br/BUILD.gn
@@ -18,7 +18,10 @@ if (enable_connection_br == false) {
   deps_br = []
 } else {
   sources_br = [ "src/br_connection.c" ]
-  deps_br = [ "$dsoftbus_root_path/core/adapter/br/mock:br_adapter" ]
+  deps_br = [
+    "$dsoftbus_root_path/core/adapter/br/mock:br_adapter",
+    "$dsoftbus_root_path/core/common/log:softbus_log",
+  ]
 }
 
 if (defined(ohos_lite)) {
