--- a/core/transmission/common/BUILD.gn
+++ b/core/transmission/common/BUILD.gn
@@ -34,6 +34,7 @@ if (defined(ohos_lite)) {
   common_deps = [
     "$dsoftbus_root_path/core/adapter/kernel:softbus_adapter_kernel",
     "$dsoftbus_root_path/core/common/json_utils:json_utils",
+    "$dsoftbus_root_path/core/common/log:softbus_log",
     "$hilog_lite_deps_path",
     "$libsec_deps_path",
   ]
@@ -84,6 +85,7 @@ if (defined(ohos_lite)) {
     public_deps = [
       "$dsoftbus_root_path/components/mbedtls:mbedtls_shared",
       "$dsoftbus_root_path/core/common/json_utils",
+      "$dsoftbus_root_path/core/common/log:softbus_log",
     ]
     part_name = "dsoftbus_standard"
     subsystem_name = "communication"
