modify config_get interface,and other minor modifications
Signed-off-by: zhufenghao <2581725389@qq.com>

--- a/core/common/softbus_property/BUILD.gn
+++ b/core/common/softbus_property/BUILD.gn
@@ -52,7 +52,7 @@ if (defined(ohos_lite)) {
         "$libsec_deps_path",
         "//build/lite/config/component/cJSON:cjson_shared",
         "$dsoftbus_root_path/adapter:softbus_adapter",
-        "//utils/native/base:utils",
+        # "//utils/native/base:utils",
       ]
     }
   }
