--- a/core/common/softbus_property/BUILD.gn
+++ b/core/common/softbus_property/BUILD.gn
@@ -26,10 +26,7 @@ if (defined(ohos_lite)) {
   if (ohos_kernel_type == "liteos_m") {
     static_library("softbus_property") {
       include_dirs = common_include
-      sources = [ 
-        "src/softbus_property.c",
-        "src/softbus_feature_config.c",
-      ]
+      sources = ["src/softbus_feature_config.c"]
       deps = [
         "$hilog_lite_deps_path",
         "$libsec_deps_path",
@@ -43,10 +40,7 @@ if (defined(ohos_lite)) {
     shared_library("softbus_property") {
       include_dirs = common_include
       cflags = [ "-Wall" ]
-      sources = [ 
-        "src/softbus_property.c",
-        "src/softbus_feature_config.c",
-      ]
+      sources = ["src/softbus_feature_config.c"]
       public_deps = [
         "$dsoftbus_core_path/common/json_utils:json_utils",
         "$hilog_lite_deps_path",
@@ -54,7 +48,6 @@ if (defined(ohos_lite)) {
         "//build/lite/config/component/cJSON:cjson_shared",
         "$dsoftbus_root_path/adapter:softbus_adapter",
         "$dsoftbus_root_path/core/common/log:softbus_log",
-        # "//utils/native/base:utils",
       ]
     }
   }
@@ -62,10 +55,7 @@ if (defined(ohos_lite)) {
   import("//build/ohos.gni")
 
   ohos_shared_library("softbus_property") {
-    sources = [ 
-        "src/softbus_property.c",
-        "src/softbus_feature_config.c",
-    ]
+    sources = ["src/softbus_feature_config.c"]
     include_dirs = [
       "$dsoftbus_core_path/common/include",
       "include",
