--- a/sdk/transmission/trans_channel/udp/BUILD.gn
+++ b/sdk/transmission/trans_channel/udp/BUILD.gn
@@ -101,6 +101,8 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/sdk/transmission/trans_channel/udp/stream/include",
       "$dsoftbus_root_path/core/adapter/kernel/include",
       "file/include",
+      "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_core/dfile/interface",
+      "$dsoftbus_root_path/components/nstackx_enhanced/nstackx_util/interface",
       "$dsoftbus_root_path/core/connection/interface",
     ]
     sources = common_src
@@ -108,10 +110,11 @@ if (defined(ohos_lite)) {
     if (enable_trans_udp == true) {
       deps = [
         "$dsoftbus_root_path/core/adapter/kernel:softbus_adapter_kernel",
-        "$dsoftbus_root_path/core/common/log:softbus_log",
         "$dsoftbus_root_path/core/common/utils:softbus_utils",
         "$dsoftbus_sdk_path/transmission/ipc:dsoftbus_trans_ipc_proxy_sdk",
         "//utils/native/base:utilsecurec_shared",
+        "$dsoftbus_root_path/core/connection/common:conn_common",
+        "$dsoftbus_root_path/components/nstackx_enhanced:nstackx",
       ]
     }
     if (is_standard_system) {
