--- a/core/authentication/BUILD.gn
+++ b/core/authentication/BUILD.gn
@@ -61,12 +61,13 @@ if (defined(ohos_lite)) {
     ]
     public_configs = [ ":auth_server_interface" ]
     deps = [
+      "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/adapter/kernel:softbus_adapter_kernel",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
       "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
       "$dsoftbus_root_path/core/common/json_utils:json_utils",
+      "$dsoftbus_root_path/core/common/log:softbus_log",
       "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
-      "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/common/utils:softbus_utils",
       "$dsoftbus_root_path/core/connection/tcp:tcp_connection",
       "$hilog_lite_deps_path",
@@ -97,22 +98,23 @@ if (defined(ohos_lite)) {
     ]
     public_configs = [ ":auth_server_interface" ]
     deps = [
+      "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/adapter/kernel:softbus_adapter_kernel",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
       "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
       "$dsoftbus_root_path/core/common/json_utils:json_utils",
+      "$dsoftbus_root_path/core/common/log:softbus_log",
       "$dsoftbus_root_path/core/common/message_handler",
       "$dsoftbus_root_path/core/common/security:softbus_crypto",
       "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
-      "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/common/utils:softbus_utils",
       "$dsoftbus_root_path/core/connection/common:conn_common",
       "$dsoftbus_root_path/core/connection/manager:conn_manager",
     ]
     if (is_standard_system) {
       external_deps = [
-        "hiviewdfx_hilog_native:libhilog",
         "deviceauth_standard:deviceauth_sdk",
+        "hiviewdfx_hilog_native:libhilog",
       ]
     }
     part_name = "dsoftbus_standard"
