--- a/adapter/default_config/feature_config/mini/config.gni
+++ b/adapter/default_config/feature_config/mini/config.gni
@@ -20,7 +20,8 @@ declare_args() {
   enable_connection_ble = false
 
   enable_trans_udp = false
+  enable_trans_udp_file = false
   enable_auth_account = false
-  
+
   enable_auto_networking = true
 }
