--- a/core/discovery/BUILD.gn
+++ b/core/discovery/BUILD.gn
@@ -20,6 +20,7 @@ config("disc_server_interface") {
     "manager/include",
     "$dsoftbus_root_path/interfaces/kits/discovery",
     "$dsoftbus_root_path/interfaces/kits/common",
+    "$dsoftbus_root_path/core/connection/interface",
   ]
 }
 
