--- a/core/transmission/common/BUILD.gn
+++ b/core/transmission/common/BUILD.gn
@@ -17,6 +17,7 @@ config("trans_common_interface") {
   include_dirs = [
     "include",
     "$dsoftbus_root_path/interfaces/kits/transport",
+    "$dsoftbus_root_path/interfaces/kits/common",
   ]
 }
 
