--- a/core/transmission/session/BUILD.gn
+++ b/core/transmission/session/BUILD.gn
@@ -16,7 +16,10 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 config("trans_session_interface") {
   include_dirs = [
     "include",
+    "$dsoftbus_root_path/core/authentication/interface",
     "$dsoftbus_root_path/core/transmission/trans_channel/manager/include",
+    "$dsoftbus_root_path/core/transmission/trans_channel/auth/include",
+    "$dsoftbus_root_path/interfaces/kits/common",
   ]
 }
 
@@ -33,6 +36,7 @@ if (defined(ohos_lite)) {
     "$dsoftbus_root_path/core/common/security/include",
     "$dsoftbus_root_path/interfaces/kits/bus_center",
     "$dsoftbus_root_path/interfaces/kits/transport",
+    "$dsoftbus_root_path/core/transmission/trans_channel/auth/include",
     "$dsoftbus_root_path/core/transmission/trans_channel/proxy/include",
     "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct/include",
     "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/include",
@@ -46,6 +50,7 @@ if (defined(ohos_lite)) {
     "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager:dsoftbus_bus_center_hub",
     "$dsoftbus_root_path/core/common/log:softbus_log",
     "$dsoftbus_root_path/core/transmission/ipc:dsoftbus_trans_ipc_proxy",
+    "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
     "$dsoftbus_root_path/core/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel",
     "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel",
     "$dsoftbus_root_path/core/transmission/trans_channel/udp_negotiation:dsoftbus_trans_udp_channel",
@@ -59,12 +64,17 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_channel_callback.c",
         "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_channel_manager.c",
         "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_lane_manager.c",
+        "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_manager.c",
+        "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_message.c",
         "src/trans_session_manager.c",
         "src/trans_session_service.c",
       ]
 
       public_configs = [ ":trans_session_interface" ]
       deps = common_deps
+      deps += [
+        "//build/lite/config/component/cJSON:cjson_static"
+      ]
     }
   } else {
     shared_library("dsoftbus_trans_session") {
@@ -77,13 +87,18 @@ if (defined(ohos_lite)) {
         "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_channel_callback.c",
         "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_channel_manager.c",
         "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_lane_manager.c",
+        "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_manager.c",
+        "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_message.c",
         "src/trans_session_manager.c",
         "src/trans_session_service.c",
       ]
 
       public_configs = [ ":trans_session_interface" ]
       deps = common_deps
-      deps += [ "//third_party/bounds_checking_function:libsec_shared" ]
+      deps += [
+        "//third_party/bounds_checking_function:libsec_shared",
+        "//build/lite/config/component/cJSON:cjson_shared",
+      ]
     }
   }
 } else {
@@ -99,12 +114,16 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/interfaces/kits/transport",
       "$dsoftbus_root_path/core/connection/interface",
       "$dsoftbus_root_path/core/transmission/ipc/include",
+      "$dsoftbus_root_path/core/transmission/trans_channel/auth/include",
       "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/include",
+      "//third_party/cJSON",
     ]
     sources = [
       "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_channel_callback.c",
       "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_channel_manager.c",
       "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_lane_manager.c",
+      "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_manager.c",
+      "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_message.c",
       "src/trans_session_manager.c",
       "src/trans_session_service.c",
     ]
@@ -113,12 +132,14 @@ if (defined(ohos_lite)) {
       external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
     }
     deps = [
+      "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
       "$dsoftbus_core_path/common/security/permission:softbus_permission",
       "$dsoftbus_core_path/transmission/ipc:dsoftbus_trans_ipc_proxy",
       "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager:dsoftbus_bus_center_hub",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
       "$dsoftbus_root_path/core/common/log:softbus_log",
+      "$dsoftbus_root_path/core/common/json_utils:json_utils",
       "$dsoftbus_root_path/core/common/utils:softbus_utils",
       "$dsoftbus_root_path/core/transmission/ipc:dsoftbus_trans_ipc_proxy",
       "$dsoftbus_root_path/core/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel",
