--- a/sdk/transmission/BUILD.gn
+++ b/sdk/transmission/BUILD.gn
@@ -18,6 +18,7 @@ config("trans_session_manager_sdk_interface") {
     "session/include",
     "trans_channel/manager/include",
     "$dsoftbus_root_path/interfaces/kits/transport",
+    "$dsoftbus_root_path/core/connection/interface",
   ]
 }
 
@@ -26,6 +27,7 @@ common_include = [
   "$dsoftbus_core_path/common/include",
   "$softbus_adapter_common/include",
   "$dsoftbus_root_path/interfaces/kits/transport",
+  "$dsoftbus_sdk_path/transmission/trans_channel/auth/include",
 ]
 
 common_src = [
@@ -48,6 +50,7 @@ if (defined(ohos_lite)) {
     "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/core/common/log:softbus_log",
     "$dsoftbus_sdk_path/transmission/ipc:dsoftbus_trans_ipc_proxy_sdk",
+    "$dsoftbus_sdk_path/transmission/trans_channel/auth:dsoftbus_trans_auth_channel_sdk",
     "$dsoftbus_sdk_path/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel_sdk",
     "$dsoftbus_sdk_path/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel_sdk",
     "$dsoftbus_sdk_path/transmission/trans_channel/udp:dsoftbus_trans_udp_channel_sdk",
@@ -85,6 +88,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/common/utils:softbus_utils",
       "$dsoftbus_sdk_path/transmission/ipc:dsoftbus_trans_ipc_proxy_sdk",
+      "$dsoftbus_sdk_path/transmission/trans_channel/auth:dsoftbus_trans_auth_channel_sdk",
       "$dsoftbus_sdk_path/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel_sdk",
       "$dsoftbus_sdk_path/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel_sdk",
       "$dsoftbus_sdk_path/transmission/trans_channel/udp:dsoftbus_trans_udp_channel_sdk",
